test/invalidwiki/Испорченный конфиг/__page.opt
[Generallll]
tags = Тест, test, двойной тег
type = html

[General]
datetime = 2017-02-28 13:53:27.969896

